src/objects/Travel_Itinerary_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Reservation_Type_MERC__c</fullName>
        <defaultValue>&quot;Business&quot;</defaultValue>
        <description>The code value of the type of travel that describes this reservation.  Hardcoded to &quot;Business&quot; Oliver Dunford 14th Dec 2013</description>
        <label>Reservation Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rm_Adlt_Qntty_MERC__c</fullName>
        <description>The quantity of adults staying in the room.
Created by John A Adams 12/13/2013</description>
        <label>Room Adult Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rm_Crib_Qntty_MERC__c</fullName>
        <description>The number of cribs in room
Created by John A Adams 12/13/2013</description>
        <label>Room Crib Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rm_Ext_Adlt_Qntty_MERC__c</fullName>
        <description>The quantity of extra adults staying in the room.
Created by John A Adams 12/13/2013</description>
        <label>Room Extra Adult Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rm_Ext_Chld_Qntty_MERC__c</fullName>
        <description>The quantity of extra children staying in the room.
Created by John A Adams 12/13/2013</description>
        <label>Room Extra Child Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rm_Typ_Cd_MERC__c</fullName>
        <description>The code detailing the type of room, number of beds, and size of beds.  Examples are A1K and A1Q.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Specify if it&apos;s single, double for single use, or double</inlineHelpText>
        <label>Room Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Rate_excl_VAT_MERC__c</fullName>
        <description>Pulls the Room Rate from the Meeting Vendor, used for ToV Calculations.  Oliver Dunford 8th Jan 2014.</description>
        <formula>Meeting_Vendor_MERC__r.Room_Rate_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Rate (excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rsrvd_Unt_Qntty_MERC__c</fullName>
        <description>The quantity of units that have been reserved for this segment. Field populated for hotel segment only and will include number of rooms.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>This field is used to count the rooms that we are booking</inlineHelpText>
        <label>Reserved Unit Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seat_Nmbr_MERC__c</fullName>
        <description>The seat number assigned to passenger for this segment.
Created by John A Adams 12/13/2013</description>
        <label>Seat Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Begin_MERC__c</fullName>
        <inlineHelpText>This is the start date/time for the Travel Segment. For Hotels, the Time will be taken from the Check-in time listed against the Hotel on the Meeting Vendor record.</inlineHelpText>
        <label>Segment Begin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Begin_Timezone_MERC__c</fullName>
        <label>Segment Begin Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>Line Islands Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatham Daylight Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji Summer Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magadan Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk Islands Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord Howe Daylight Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Daylight Time (Australia/Adelaide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Standard Time (Australia/Darwin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippine Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Standard Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taipei Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Western Standard Time (Australia/Perth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh Time (Asia/Dhaka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal Time (Asia/Kathmandu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Standard Time (Asia/Colombo)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_End_MERC__c</fullName>
        <inlineHelpText>This is the end date/time for the Travel Segment. For Hotels, the Time will be taken from the Check-out time listed against the Hotel on the Meeting Vendor record.</inlineHelpText>
        <label>Segment End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_End_Timezone_MERC__c</fullName>
        <label>Segment End Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>Line Islands Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatham Daylight Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji Summer Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magadan Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk Islands Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord Howe Daylight Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Daylight Time (Australia/Adelaide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Standard Time (Australia/Darwin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippine Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Standard Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taipei Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Western Standard Time (Australia/Perth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh Time (Asia/Dhaka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal Time (Asia/Kathmandu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Standard Time (Asia/Colombo)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Number__c</fullName>
        <description>The number that identifies a specific segment within a supplier record locator. Oliver Dunford 14th Dec 2013.</description>
        <label>Segment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Type_Description_MERC__c</fullName>
        <description>The type of segment. Listed below are examples and may not be complete:
Airline 
Car
Hotel
Limousine
Rail

Oliver Dunford 14th Dec</description>
        <label>Segment Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgmnt_Bgin_TS_MERC__c</fullName>
        <description>The begin date and time of this segment.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>This is the start date/time for the Travel Segment. For Hotels, the Time will be taken from the Check-in time listed against the Hotel on the Meeting Vendor record.</inlineHelpText>
        <label>Segment Begin Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sgmnt_End_TS_MERC__c</fullName>
        <description>The end date and time of this segment.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>This is the end date/time for the Travel Segment. For Hotels, the Time will be taken from the Check-out time listed against the Hotel on the Meeting Vendor record.</inlineHelpText>
        <label>Segment End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sgmnt_Trvl_Drtn_Vl_MERC__c</fullName>
        <description>The estimated flying time duration in hours and minutes
Created by John A Adams 12/13/2013</description>
        <label>Segment Travel Duration Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Prvnc_MERC__c</fullName>
        <description>The code value of the address state/province for this hotel property.
Created by John A Adams 12/13/2013</description>
        <label>State Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>If the HCP cancels travel or does not use it, the record can be Cancelled.  This then removes any ToV from the associated meeting for that HCP.  Oliver Dunford 11th June 2014.</description>
        <inlineHelpText>If the HCP cancels attendance, or the ToV attributed to this record should not be reported within Mercury due to a No Show, the record can be updated to Cancelled.  Confirmed records are reportable.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Service_MERC__c</fullName>
        <description>The identifying code used for this supplier service.  Listed below are examples and may not be complete:
 - Sabre
 - Apollo
 - Worldspan
 - etc

Oliver Dunford 14th Dec 2013.</description>
        <label>Supplier Service</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Status_Code_MERC__c</fullName>
        <description>The code value of the supplier status of this segment.  Listed below are examples and may not be complete:
 BK - Booked
 HK - Confirmed Flight

Oliver Dunford 14th Dec 2013</description>
        <label>Supplier Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Name_MERC__c</fullName>
        <description>The tag identifier for a reporting field.   It is either expressed as a UDID field or as customer-defined tag. Hardcoded to &quot;GroupCode&quot; unless defined otherwise. Oliver Dunford 14th Dec</description>
        <label>Tag Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number_MERC__c</fullName>
        <description>The ticket number that comes back from the supplier service when the ticket is generated.  This does not include the 3 character validating carrier code (which is the final part of the &quot;ticket number&quot; sent by the CRS). Oliver Dunford 14th Dec 2013.</description>
        <label>Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fare_Amount_MERC__c</fullName>
        <description>The total amount of the fare including taxes. Oliver Dunford 14th Dec 2013.</description>
        <inlineHelpText>This value is reportable if the &quot;Individual Travel ToV Applicable&quot; checkbox is set for a Private Transfer Travel Itinerary record.</inlineHelpText>
        <label>Total Fare Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Id_MERC__c</fullName>
        <description>A unique GUID identifier assigned to each transaction to enable tracking through multiple systems (e.g. &quot;7855b14e-01d6-4432-894b-97c88e6c606d&quot;)
Created by John A Adams 12/13/2013</description>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_MERC__c</fullName>
        <description>Indicates if the transaction is Cancelled, Ticketed, Passed_OC, or Booked Oliver Dunford 14th Dec 2013.</description>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Detail_Typ_MERC__c</fullName>
        <description>Identifies what details of travel
Created by John A Adams 10/31/2013</description>
        <label>Travel Detail Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connection Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Proposal_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup to ensure Individual Travel Segments can be associated to a specific Travel Proposal : MERC : Created on 16/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Travel Proposal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Air, Bus, Rail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Travel_Itinerary_MERC__c</referenceTo>
        <relationshipLabel>Travel Itineraries</relationshipLabel>
        <relationshipName>Travel_Itineraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Proposal_Status_MERC__c</fullName>
        <description>The Status of the associated Travel Proposal, used by the Marketing Cloud to return the correct records : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>IF((TEXT(  Travel_Proposal_MERC__r.Status_MERC__c ) = &apos;Ready for Proposal&apos; || TEXT(  Travel_Proposal_MERC__r.Status_MERC__c ) = &apos;Proposed&apos;), &apos;Ready for Proposal/Proposed&apos;, TEXT(Travel_Proposal_MERC__r.Status_MERC__c))</formula>
        <label>Travel Proposal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traveler_Ref_Id_MERC__c</fullName>
        <description>Key to TravelerList/Traveler/ @id Oliver Dunford 14th Dec 2013.</description>
        <label>Traveler Ref Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traveller_Name_MERC__c</fullName>
        <description>Display Account Name. Created 12/13/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.FirstName  &amp;  
&quot; &quot; &amp;
Meeting_Participant_MERC__r.Account_MERC__r.Mdl_Nm_GLBL__c  &amp;  
&quot; &quot; &amp;
Meeting_Participant_MERC__r.Account_MERC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traveller Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trn_Cch_Nmbr_MERC__c</fullName>
        <description>The identifying number of the assign coach within a train for a rail segment.
Created by John A Adams 12/13/2013</description>
        <label>Train Coach Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trn_Nmbr_MERC__c</fullName>
        <description>This is a number which identifies a specific rail-trip from one station to another. Similar to an air segment&apos;s flight number.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Company and Carrier Number</inlineHelpText>
        <label>Train Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trvl_Dstnc_Vl_MERC__c</fullName>
        <description>The actual air miles from the departure city to the arrival city.
Created by John A Adams 12/13/2013</description>
        <label>Travel Distance Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trvlr_Id_Rfrnc_MERC__c</fullName>
        <description>Traveler Id reference to segment
Created by John A Adams 12/13/2013</description>
        <label>Traveler Id Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address_City_MERC__c</fullName>
        <description>Hotel Vendor address for the Marketing Cloud : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Primary_Addr_City_GLBL__c</formula>
        <label>Vendor Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address_Country_MERC__c</fullName>
        <description>Hotel Vendor address for the Marketing Cloud : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Primary_Address_Country_GLBL__c</formula>
        <label>Vendor Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address_Line_1_MERC__c</fullName>
        <description>Hotel Vendor address for the Marketing Cloud : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Primary_Addr_Line1_GLBL__c</formula>
        <label>Vendor Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address_Line_2_MERC__c</fullName>
        <description>Hotel Vendor address for the Marketing Cloud : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Primary_Addr_Line2_GLBL__c</formula>
        <label>Vendor Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address_Postal_Code_MERC__c</fullName>
        <description>Hotel Vendor address for the Marketing Cloud : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Primary_Pstl_Cd_Extnsn_GLBL__c</formula>
        <label>Vendor Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Class_Code_MERC__c</fullName>
        <description>The code value representing the class of vendor.  Listed below are examples and may not be complete:
Airline = 1
Car = 2
Hotel = 3
Limousine = 4
Rail = 5

Oliver Dunford 14th Dec 2013.</description>
        <label>Vendor Class Code</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Classification_MERC__c</fullName>
        <description>The vendor classification.  Listed below are examples and may not be complete:
Airline 
Car
Hotel
Limousine
Rail
Oliver Dunford 14 Dec 2013.</description>
        <label>Vendor Classification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code_MERC__c</fullName>
        <description>The code value that representing a vendor company. Oliver Dunford 14th Dec 2013.</description>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_MERC__c</fullName>
        <description>Airline, Hotel, Car Rental Agency
Created by John A Adams 10/10/2013</description>
        <label>Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_MERC__c</fullName>
        <description>The name of a vendor company. Oliver Dunford 14th Dec 2013.</description>
        <label>Vendor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Pstl_Cd_MERC__c</fullName>
        <description>The postal code of the address for this hotel property.
Created by John A Adams 12/13/2013</description>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eTicket_Flg_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates whether this air segment can be electronically ticketed.
Created by John A Adams 12/13/2013</description>
        <label>eTicket Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Travel Itinerary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Travel_Detail_Typ_MERC__c</columns>
        <columns>Traveller_Name_MERC__c</columns>
        <columns>Vendor_MERC__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRV-{000000}</displayFormat>
        <label>Itinerary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Itineraries</pluralLabel>
    <recordTypes>
        <fullName>MERC_Air</fullName>
        <active>true</active>
        <description>Air Travel Information</description>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Bus</fullName>
        <active>true</active>
        <description>Bus Travel Information</description>
        <label>Bus</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Car</fullName>
        <active>true</active>
        <description>Rental Car or Car Service Information or Private Transfer</description>
        <label>Car Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Hotel</fullName>
        <active>true</active>
        <description>Hotel Information</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Rail</fullName>
        <active>true</active>
        <description>Rail Travel Information</description>
        <label>Rail</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Travel_Proposal</fullName>
        <active>true</active>
        <description>Used to create Travel Proposals for Meeting Participants</description>
        <label>Travel Proposal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Confirm_ToV_Reporting_Change_MERC</fullName>
        <active>true</active>
        <description>If ToV has already been reported for the meeting participant, HCP Care needs to confirm the change to the hotel and Individual Travel Fields that can effect ToV.</description>
        <errorConditionFormula>(
! Confirm_ToV_Reporting_Change_MERC__c &amp;&amp;
ISPICKVAL( Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;) &amp;&amp; (RecordType.DeveloperName = &quot;MERC_Hotel&quot;) &amp;&amp;
(
(ISCHANGED( Sgmnt_Bgin_TS_MERC__c ) || ISCHANGED( Sgmnt_End_TS_MERC__c ) || ISCHANGED(  Meeting_Vendor_MERC__c  )) ||
(ISCHANGED( Status_MERC__c ) &amp;&amp; ISPICKVAL( Status_MERC__c , &quot;Cancelled&quot;))
)
)

||

(
! Confirm_ToV_Reporting_Change_MERC__c &amp;&amp;
ISPICKVAL( Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;) &amp;&amp; (RecordType.DeveloperName = &quot;MERC_Car&quot;) &amp;&amp; ( Individual_Travel_ToV_Applicable_MERC__c  = TRUE) &amp;&amp;
(
(ISCHANGED( Sgmnt_Bgin_TS_MERC__c ) || ISCHANGED( Sgmnt_End_TS_MERC__c ) || ISCHANGED(  Total_Fare_Amount_MERC__c  )) ||
(ISCHANGED( Status_MERC__c ) &amp;&amp; ISPICKVAL( Status_MERC__c , &quot;Cancelled&quot;)) ||
(ISCHANGED( Individual_Travel_ToV_Applicable_MERC__c  ) &amp;&amp; ( Individual_Travel_ToV_Applicable_MERC__c = TRUE))
)
)</errorConditionFormula>
        <errorDisplayField>Confirm_ToV_Reporting_Change_MERC__c</errorDisplayField>
        <errorMessage>ToV has already been reported this meeting participant. Customer Meeting Services needs to confirm this change before it can be made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Enforce_Total_Fare_Amount</fullName>
        <active>true</active>
        <description>Ensures  a Total Fare Amount is entered for all Private Transfer Records where ToV should be applicable : MERC : Created on 24/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>Individual_Travel_ToV_Applicable_MERC__c = TRUE &amp;&amp; (ISBLANK( Total_Fare_Amount_MERC__c ) || (Total_Fare_Amount_MERC__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>Total_Fare_Amount_MERC__c</errorDisplayField>
        <errorMessage>If Individual Travel ToV is applicable for private transfer the Total Fare Amount must be entered and must also be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Prevent_Private_Transfer_ToV</fullName>
        <active>true</active>
        <description>Prevents the ToV for Individual Transfer checkbox being set if the Meeting Participant is being sponsored for an Independent Meeting.  ToV should be typed into the meeting participant : MERC : Created on 24/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>Meeting_Participant_MERC__r.RecordType.DeveloperName = &quot;MERC_Individual_Sponsorship&quot; &amp;&amp; Individual_Travel_ToV_Applicable_MERC__c = TRUE</errorConditionFormula>
        <errorDisplayField>Individual_Travel_ToV_Applicable_MERC__c</errorDisplayField>
        <errorMessage>For Individual Sponsorship all ToV should be totalled and entered onto the meeting participant record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Segment_Status_Chnge_B4_Proposal_MERC</fullName>
        <active>true</active>
        <description>14JULY2015 BHo - This validation rule will prevent a user from changing the status of a Segment to Confirmed before changing the status of the Proposal.</description>
        <errorConditionFormula>((RecordType.DeveloperName = &quot;MERC_Air&quot;) ||
(RecordType.DeveloperName = &quot;MERC_Bus&quot;) ||
(RecordType.DeveloperName = &quot;MERC_Rail&quot;))
&amp;&amp;
TEXT(Status_MERC__c) = &quot;Confirmed&quot;
&amp;&amp;
TEXT(Travel_Proposal_MERC__r.Status_MERC__c) = &quot;Draft&quot;</errorConditionFormula>
        <errorMessage>The Status of each Segment can only be set to Cancelled, please use the Travel Proposal Status to indicate the progress of the Proposal, the Segment Status values will then automatically get updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Travel_Records_post_ToV_Final</fullName>
        <active>true</active>
        <description>Prevent  people from adding a new hotel records or travel records that effect ToV once it is final.  Created by John Adams 4/7/2014</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL( Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;) &amp;&amp; Confirm_ToV_Reporting_Change_MERC__c = FALSE</errorConditionFormula>
        <errorMessage>ToV for the meeting has already been finalised.  No additional Itinerary items can be created.  Please contact a member of the customer meeting services team.</errorMessage>
    </validationRules>
</CustomObject>